Fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ html{
 }
 
 button{
-    margin-bottom: 10px;
+
 }
 
 input{
@@ -42,7 +42,7 @@ input{
 }
 
 .center{
-    margin: 65px auto;
+    margin: 80px auto;
     text-align: center;
 }
 
